# geo-job-search

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  compose.deploy.yml  compose.yml  integration-test.yml  test.yml
.gitlab/merge_request_templates/: Merge_Request_Template.md
mysql/: Dockerfile  Dockerfile.integrate
mysql/scripts/: setup.sql  test_setup.sql
react/: .eslintrc.js  Dockerfile  package-lock.json  package.json
react/src/: App.css  App.js  cities.json  index.css  index.js  setupProxy.js  test.json
react/src/components/effects/: Magnetic.jsx
react/src/components/filter/: FilterMenu.css  FilterMenu.jsx
react/src/components/job card/: JobCard.css  JobCard.jsx
react/src/components/job side bar/: JobSideBar.css  JobSidebar.jsx
react/src/components/job table/: JobTable.css  JobTable.jsx
react/src/components/map/: JobMap.css  JobMap.jsx  test.jsx
react/src/components/navbar/: NavBar.css  NavBar.jsx
react/src/components/search/: SearchBar.css  SearchBar.jsx
scraper/: .flake8  Dockerfile  db_util.py  driver_util.py  execute-scraper.sh  fake_jobs.json  install.sh  main.py  pyproject.toml  scraper-cron  scraper.py  scraper_config.json  setup-cron.sh  test_scraper.py
scraper/testWebsite/canadian_job/: CanadianJob1.txt  canadianJobBank.txt
scraper/testWebsite/indeed/: indeedJob1.txt  indeedJob2.txt  indeedJob3.txt  indeedJobBoard1.txt  indeedJobBoard2.txt  indeedJobBoard3.txt
spring/: Dockerfile  Dockerfile.integrate  Dockerfile.test  README.md  execute-integration-test.sh  pom.xml
spring/src/main/resources/: checkstyle-suppressions.xml  (+1 more)
(+14 files in other folders)
